--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="This project serves to showcase my work including moocs, education, projects, experience,etc. to the world."
+      content="This project serves to showcase my work including moocs, education, projects, experience, etc. to the world."
     />
-    <!-- Robot.txt -->
-    <meta name="robots" content="index,follow" />
-    <meta name="Googlebot" content="index,follow" />
-    <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:title" content="Miguel Sousa | Home" />
     <meta name="application-name" content="Miguel Sousa | Home" />
     <meta name="apple-mobile-web-app-title" content="Miguel Sousa | Home" />
     <meta
       name="summary"
-      content="This project serves to showcase my work including moocs, education, projects, experience,etc. to the world."
+      content="This project serves to showcase my work including moocs, education, projects, experience, etc. to the world."
     />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
@@ -62,9 +57,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "G-M11CMZ12Q");
+      gtag('config', 'G-M11CMZ12Q');
     </script>
   </head>
 
