--- a/education.html
+++ b/education.html
@@ -2,28 +2,14 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Education</title>
+    <title>Miguel Sousa | Education</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
-    <meta name="description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+    <meta name="description" content="This project serves to showcase my work including moocs, education, projects, experience, etc. to the world." />
 
-    <!-- Robot.txt -->
-    <meta name="robots" content="index,follow" />
-    <meta name="Googlebot" content="index,follow" />
-    <meta name="AdsBot-Google" content="index,follow" />
-
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
-    <meta property="og:title" content="John Doe | Education">
-    <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
-
-    <meta name="application-name" content="John Doe | Education" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Education" />
-    <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+        <meta name="application-name" content="Miguel Sousa | Education" />
+    <meta name="apple-mobile-web-app-title" content="Miguel Sousa | Education" />
+    <meta name="summary" content="This project serves to showcase my work including moocs, education, projects, experience, etc. to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
     <!--For Dark/Light mode Toggle-->
@@ -43,9 +29,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link id='favicon' rel="shortcut icon" href="assets/images/favicon.png" type="image/x-png">
-    <script defer src="./assets/js/dynamicTitle.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
+
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -289,41 +273,15 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
-        <div class="date date1">2021-2022</div>
+        <div class="date date1">2017-2020</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading">Instituto Superior de Engenharia do Porto</h2>
+            <h6>Systems Engineer</h6>
         </div>
       </div>
    </div> 
 
     <!-- Second -->
-    <div class="timeline-item">
-
-      <div class="timeline-img"></div>
-
-      <div class="timeline-content timeline-card js--fadeInRight">
-        <div>
-            <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
-        </div>
-        <div class="date date2">2017-2021</div>
-        <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
-        </div>
-      </div>
-
-    </div>   
-
-    <!-- Third -->
 
     <div class="timeline-item">
 
@@ -333,17 +291,11 @@
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
         <div class="date date3">2013-2017</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
+            <h2 class="timelineHeading3">Escola Secundaria de Ermesinde</h2>
             <h6>High School</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
-        </div>
       </div>
     </div>
 
-        </div>
       </section>
       
     
@@ -361,9 +313,6 @@
       <div class="cursor-dot"></div>
     <!-- Dynamic footer section -->
 
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
-    <!-- Fetching our Google Tag Manager -->
 
     <!-- script -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
