--- a/projects.html
+++ b/projects.html
@@ -2,36 +2,16 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Projects</title>
+    <title>Miguel Sousa | Projects</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO -->
-    <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source and contribution to open source" />
-    <meta name="description" content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+        <meta name="description" content="This project serves to showcase my work including moocs, education, projects, experience, etc. to the world." />
 
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
-
-    <!-- Robot.txt -->
-    <meta name="robots" content="index,follow" />
-    <meta name="Googlebot" content="index,follow" />
-    <meta name="AdsBot-Google" content="index,follow" />
-
-    <!-- Open Graph for Social Media -->
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/projects.html" />
-    <meta property="og:title" content="John Doe | Projects" />
-    <meta property="og:description" content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/projects.html" />
-    <meta name="twitter:card" content="summary" />
-
-    <!-- Twitter Posts -->
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/projects.html" />
-
-    <meta name="application-name" content="John Doe | Projects" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Projects" />
-    <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+    <meta name="application-name" content="Miguel Sousa | Projects" />
+    <meta name="apple-mobile-web-app-title" content="Miguel Sousa | Projects" />
+    <meta name="summary" content="This project serves to showcase my work including moocs, education, projects, experience, etc. to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 
@@ -49,9 +29,6 @@
     <link rel="stylesheet" href="assets/css/cursor.css">
     <link id='favicon' rel="icon" href="assets/images/favicon.png" type="image/png">
     <!--Favicon-->
-    <script defer src="./assets/js/dynamicTitle.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M11CMZ12Q"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -299,7 +276,7 @@ add
                     <div class="dropdown col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="main-heading mb-0 projects_head">My <span class="my_projects">Projects</span></h2>
                         <p class="pre-heading font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                            My projects makes use of vast variety of latest technology tools. My best experience is to create Data Science projects and deploy them to web applications using cloud infrastructure.
+                            My projects makes use of vast variety of latest technology tools. My best experience is to create web applications projects.
                         </p>
                     </div>
                 </div>
