Remove unused images and update techstack & experience

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             >I am into
             <span
               class="animated-text"
-              data-words="Site Reliability Engineering, DevOps, Web Development, Open Source, Linux, Blockchain"
+              data-words="Site Reliability Engineering, Cloud, DevOps, Open Source, Linux"
             ></span>
           </span>
           <div>
