--- a/techstack.html
+++ b/techstack.html
@@ -265,25 +265,10 @@
                 style="display: flex; flex-wrap: wrap"
               >
                 <div class="html_icon techstack_icon">
-                  <i class="fab fa-node"></i>
+                  <i class="fa-brands fa-github"></i>
                 </div>
-                <div class="css_icon techstack_icon">
-                  <i class="fab fa-js-square"></i>
-                </div>
-                <div class="python_icon techstack_icon">
-                  <i class="fab fa-git-alt"></i>
-                </div>
-                <div class="js_icon techstack_icon">
-                  <i class="fab fa-css3-alt"></i>
-                </div>
-                <div class="node_icon techstack_icon">
-                  <i class="fab fa-html5"></i>
-                </div>
-                <div class="cpp_icon techstack_icon">
-                  <i class="fab fa-sass"></i>
-                </div>
-                <div class="c_icon techstack_icon">
-                  <i class="fab fa-docker"></i>
+                <div class="html_icon techstack_icon">
+                  <i class="fa-solid fa-cloud"></i>
                 </div>
                 <div class="git_icon techstack_icon">
                   <i class="fab fa-linux"></i>
