--- a/techstack.html
+++ b/techstack.html
@@ -265,10 +265,7 @@
                 style="display: flex; flex-wrap: wrap"
               >
                 <div class="html_icon techstack_icon">
-                  <i class="fa-brands fa-github"></i>
-                </div>
-                <div class="html_icon techstack_icon">
-                  <i class="fa-solid fa-cloud"></i>
+                  <i class="fab fa-brands fa-github"></i>
                 </div>
                 <div class="git_icon techstack_icon">
                   <i class="fab fa-linux"></i>
